--- a/index.html
+++ b/index.html
@@ -14,6 +14,30 @@
     </header>
 
     <main>
+      <!-- Settings Section -->
+      <div class="settings-section">
+        <div class="settings-header">
+          <h3>Settings</h3>
+          <button id="toggleSettingsBtn" class="toggle-btn">▼</button>
+        </div>
+        <div id="settingsContent" class="settings-content hidden">
+          <div class="setting-item">
+            <label for="hourlyRateInput">Hourly Rate ($):</label>
+            <input
+              type="number"
+              id="hourlyRateInput"
+              min="0"
+              step="0.01"
+              placeholder="0.00"
+              class="hourly-rate-input"
+            />
+            <button id="saveRateBtn" class="save-rate-btn">Save Rate</button>
+            <span id="rateSaveIndicator" class="rate-save-indicator hidden">✓ Saved</span>
+          </div>
+          <p class="settings-note">Note: Changing the hourly rate will only apply to new entries going forward.</p>
+        </div>
+      </div>
+
       <!-- Week Navigation -->
       <div class="week-navigation">
         <button id="prevWeekBtn" class="nav-btn">← Previous Week</button>
@@ -36,8 +60,9 @@
               <th>Date</th>
               <th>Day</th>
               <th>Hours</th>
-              <th>Task</th>
+              <th>Coworker</th>
               <th>Notes</th>
+              <th>Total ($)</th>
             </tr>
           </thead>
           <tbody id="tableBody">
@@ -48,6 +73,7 @@
               <td colspan="2"><strong>Total:</strong></td>
               <td id="totalHours"><strong>0</strong></td>
               <td colspan="2"></td>
+              <td id="totalEarnings"><strong>$0.00</strong></td>
             </tr>
           </tfoot>
         </table>
@@ -66,6 +92,10 @@
         <div class="stat">
           <span class="stat-label">Avg Hours/Day:</span>
           <span class="stat-value" id="summaryAverage">0</span>
+        </div>
+        <div class="stat">
+          <span class="stat-label">Total Earnings:</span>
+          <span class="stat-value" id="summaryEarnings">$0.00</span>
         </div>
       </div>
 
