:sparkles: Add report feat

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 
       <!-- Action Buttons -->
       <div class="actions">
+        <a href="reports.html" class="action-btn reports-link">View Earnings Reports</a>
         <button id="exportWeekBtn" class="action-btn">Export Week CSV</button>
         <button id="exportAllBtn" class="action-btn secondary">Export All CSV</button>
       </div>
