--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
           <thead>
             <tr>
               <th>Date</th>
-              <th>Day</th>
               <th>Hours</th>
               <th>Coworker</th>
               <th>Notes</th>
@@ -77,7 +76,7 @@
           </tbody>
           <tfoot>
             <tr class="total-row">
-              <td colspan="2"><strong>Total:</strong></td>
+              <td><strong>Total:</strong></td>
               <td id="totalHours"><strong>0</strong></td>
               <td colspan="2"></td>
             </tr>
